2014-06-07  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: sysconf and confstr cleanups.
	* src/procenv.h:
	  - Removed now unecessary macros.
	  - Bumped PROCENV_FORMAT_VERSION.

2014-06-04  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_pathconfs(): Guard all defines.
	  - show_confstrs(): Guard all defines.
	* src/procenv.h: Added _show_confstr() macro to allow name to be
	  specified.

2014-06-03  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - Guard extended interfaces flags (IFF_*) since as of
	    kernel 3.15 they have been removed (LP: #1324256).
	  - show_all_groups(): Fixed possible memory leak - thanks Coverity.
	  - show_uname(): Added asserts.
	* src/tests/check_all_args.in: Temporary work-around for lp:1325494.

2014-03-27  James Hunt  <james.hunt@ubuntu.com>

	* TODO: Update.
	* src/procenv.c:
	  - get_arch(): Update for Sparc 64-bit (V9).
	  - show_capabilities_linux(): Move CAP_LAST_CAP out of the list and use
	    it as a count to avoid it being confused for an actual capability.

2014-03-20  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1: Add reference to personality(2).
	* src/procenv.c: --misc: Add Linux personality type and flags.
	* src/procenv.h: Bump PROCENV_FORMAT_VERSION to 6 for format change.

2014-03-17  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1: Add reference to libcap(3).
	* procenv.spec.in: Buid-depend on libcap-devel.
	* README: Update.

2014-03-14  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_mounts_linux(): Don't quote unknown canonical name.
	  - get_canonical(): Return value denoting if name was known.
	  - show_capabilities_linux():
	  - Use cap_get_bound() rather than prctl().
	  - Memory leak fix.
	* src/procenv.h: _show_capability(): 
	  - Use cap_get_bound() rather than prctl().
	  - Add "supported".

2014-03-13  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Corrected formatting.
	* TODO: Updates.
	* configure.ac: Link to libcap if available.